--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 /.idea/shelf/
+/.idea/compiler.xml
+/.idea/jarRepositories.xml
 .DS_Store
 /build
 /captures
